tests/ui/derives/clone-copy/derives-span-Clone.stderr
error[E0277]: the trait bound `Error: Clone` is not satisfied
  --> $DIR/derives-span-Clone.rs:9:9
   |
LL | #[derive(Clone)]
   |          ----- in this derive macro expansion
...
LL |         x: Error,
   |         ^^^^^^^^ the trait `Clone` is not implemented for `Error`
   |
help: consider annotating `Error` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct Error;
   |

error[E0277]: the trait bound `Error: Clone` is not satisfied
  --> $DIR/derives-span-Clone.rs:16:9
   |
LL | #[derive(Clone)]
   |          ----- in this derive macro expansion
...
LL |         Error,
   |         ^^^^^ the trait `Clone` is not implemented for `Error`
   |
help: consider annotating `Error` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct Error;
   |

error[E0277]: the trait bound `Error: Clone` is not satisfied
  --> $DIR/derives-span-Clone.rs:22:5
   |
LL | #[derive(Clone)]
   |          ----- in this derive macro expansion
LL | struct Struct {
LL |     x: Error,
   |     ^^^^^^^^ the trait `Clone` is not implemented for `Error`
   |
help: consider annotating `Error` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct Error;
   |

error[E0277]: the trait bound `Error: Clone` is not satisfied
  --> $DIR/derives-span-Clone.rs:27:5
   |
LL | #[derive(Clone)]
   |          ----- in this derive macro expansion
LL | struct TupleStruct(
LL |     Error,
   |     ^^^^^ the trait `Clone` is not implemented for `Error`
   |
help: consider annotating `Error` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct Error;
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
